# dov

./: Cargo.toml  README.md
crates/dov-channel/: Cargo.toml
crates/dov-channel/src/: agc.rs  erasure.rs  lib.rs  resample.rs  rng.rs
crates/dov-codec/: Cargo.toml  build.rs
crates/dov-codec/src/: amr_nb.rs  chain.rs  cvsd.rs  ffi.rs  gsm_fr.rs  lib.rs
crates/dov-frame/: Cargo.toml
crates/dov-frame/src/: frame.rs  gf256.rs  interleave.rs  lib.rs  rs.rs
crates/dov-harness/: Cargo.toml
crates/dov-harness/src/: adapt.rs  ber.rs  bridge.rs  bt.rs  coded.rs  link.rs  main.rs  prbs.rs  probe.rs  rate.rs  run.rs  scenarios.rs  stress.rs  timing.rs  validate.rs  wav.rs
crates/dov-io/: Cargo.toml
crates/dov-io/src/: lib.rs
crates/dov-modem/: Cargo.toml
crates/dov-modem/src/: goertzel.rs  lib.rs  mfsk.rs  sync.rs
docs/: BLUETOOTH.md  DESIGN.md  VERIFICATION.md
scripts/: reproduce.sh
