[workspace]
resolver = "2"
members = [
    "crates/dov-codec",
    "crates/dov-modem",
    "crates/dov-channel",
    "crates/dov-frame",
    "crates/dov-io",
    "crates/dov-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/atereshkin/dov"

[workspace.dependencies]
dov-codec = { path = "crates/dov-codec" }
dov-modem = { path = "crates/dov-modem" }
dov-channel = { path = "crates/dov-channel" }
dov-frame = { path = "crates/dov-frame" }
dov-io = { path = "crates/dov-io" }

[profile.release]
opt-level = 3
lto = "thin"
