[package]
name = "dov-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test harness for measuring what a software modem signal survives through GSM/AMR vocoders"

[dependencies]
dov-codec = { workspace = true }
dov-modem = { workspace = true }
dov-channel = { workspace = true }
dov-frame = { workspace = true }

[[bin]]
name = "dov-probe"
path = "src/main.rs"
